data/derived/sp14/progs/unify/prog0683.ml.out
Characters 157-158:
  counter = counter + 1
                      ^
Error: This expression has type int
       This is not a function; it cannot be applied.
